@@ -29,10 +29,6 @@ page of input has arrived.  With this option serdi uses one page less memory,
 but will likely be significantly slower.
 
 .TP
-.BR \-f
-Keep full URIs in input (don't qualify).
-
-.TP
 .BR \-h
 Print the command line options.
 
