@@ -303,11 +303,8 @@ typedef struct {
    always ASCII).
 */
 typedef enum {
-	SERD_STYLE_ABBREVIATED = 1,       /**< Abbreviate triples when possible. */
-	SERD_STYLE_ASCII       = 1 << 1,  /**< Escape all non-ASCII characters. */
-	SERD_STYLE_RESOLVED    = 1 << 2,  /**< Resolve URIs against base URI. */
-	SERD_STYLE_CURIED      = 1 << 3,  /**< Shorten URIs into CURIEs. */
-	SERD_STYLE_BULK        = 1 << 4   /**< Write output in pages. */
+	SERD_STYLE_ASCII = 1 << 0,  /**< Escape all non-ASCII characters. */
+	SERD_STYLE_BULK  = 1 << 1   /**< Write output in pages. */
 } SerdStyle;
 
 /**
